...
const nextText = "Next";
const textData =
    "We hope you're enjoying your experience with PressHop. Please share your feedback with us. Your insights will help us enhance both your experience, and the quality of our service. Thank you!";
const goodMorningText = "Good morning";
const loginSubTitleText =
    "Welcome back, you were missed. Please hop right back in";
const loginUserHint = "Enter user name / phone number / email Id";
const enterPasswordHint = "Enter password *";
const enterNewPasswordHint = "Enter new password";
const requiredText = "Required";
const validUserNameOrPhoneText = "Please enter valid user name or phone number";
const passwordErrorText =
    "Your password must be at least 8 characters in length";
const forgotPasswordText = "Forgot password";
const confirmPasswordErrorText = "Password doesn't match";
const signInText = "Sign In";
const orText = "or";
const nameHint = "Enter user name";
const continueGoogleText = "Continue with Google";
const donotHaveAccountText = "Don't have an account?";
const clickHereToJoinText = " Click here to join the tribe";
const emailErrorText = "Please enter a valid email address";
...
const ratingText = "Ratings";
const pdfView = "PDF View";
const reviewText = "Reviews";
const receivedText = "Received";
const givenText = "Given";
const myProfileText = "My profile";
const editProfileText = "Edit profile";
const leaderboardText = "Leaderboard";
const myDraftText = "My drafts";
const myContentText = "Content";
const contentText = "Content";
const detailsText = "details";
const stayLoggedInText = "Stay Logged In";
...
const companyName = "Company # 135 22 872";

/*-----End--------*/

/*-----Vishal--------*/
const signUpText = 'Sign Up';
const firstNameHintText = 'Enter first name *';
const lastNameHintText = 'Enter last name *';
const userNameHintText = 'Enter user name *';
const referralCodeHintText = "Enter referral code (optional)";
const phoneHintText = 'Enter mobile number *';
const emailHintText = 'Enter email *';
const apartmentNoHintText = 'Apartment number / House name';
...
const clickHereToAgreeText = 'Click here, to agree to our';
const clickHereText = 'Click here';
const termsAndConditionText = 'Terms & Conditions';
const andText = 'and';
const viewsText = 'view';
const privacyPolicyText = 'Privacy Policy';
const submitText = 'Submit';
const publishText = 'Publish';
const continueWithGoogleText = 'Continue with Google';
const alreadyHaveAccountText = 'Already have an account?';
const legalDescText =
    'Please read and accept the below mentioned terms & conditions, and privacy policy to proceed';
const pleaseConfirmText =
...
/*----Sidharth-----*/

/// @ Sid
const toText = "To";

/// Sid 10 Mar 2023
const updateText = "Update";
const viewWeeklyText = "View weekly";
const viewMonthlyText = "View monthly";
const currentMontText = "Current month";
const viewYearlyText = "View yearly";
const filterDateText = "Date";
const allContentsText = "All contents";
...
