...
                            SizedBox(
                              height: size.width * AppDimensions.numD08,
                            ),

                            /// User name controller
                            CommonTextField(
                              key: const Key('login_field'),
                              size: size,
                              borderColor: AppColorTheme.colorTextFieldBorder,
                              maxLines: 1,
                              controller: loginController,
                              hintText: AppStrings.loginUserHint,
                              textInputFormatters: null,
...
                            SizedBox(
                              height: size.width * AppDimensions.numD08,
                            ),

                            /// Password Controller
                            CommonTextField(
                              key: const Key('password_field'),
                              size: size,
                              maxLines: 1,
                              borderColor: AppColorTheme.colorTextFieldBorder,
                              controller: passwordController,
                              hintText: AppStrings.enterPasswordHint,
                              textInputFormatters: null,
...
                            SizedBox(
                              height: size.width * AppDimensions.numD07,
                            ),

                            /// SignIn Button
                            SizedBox(
                              key: const Key('sign_in_button'),
                              width: size.width,
                              height: size.width *
                                  (isIpad
                                      ? AppDimensions.numD1
                                      : AppDimensions.numD14),
                              child: commonElevatedButton(
...
